--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/cheesy-pesto-roll.html">Cheesy Pesto Roll</a>
+    <img src="https://t4.ftcdn.net/jpg/03/01/76/65/360_F_301766534_Nd0WoLqus2TVilLcRQL6OMACiJeEgnWu.jpg" alt="odin recipes">
+    <ul>
+        <li><a href="recipes/cheesy-pesto-roll.html">Cheesy Pesto Roll</a></li>
+        <li><a href="recipes/potato-latkes.html">Potato Latkes</a></li>
+        <li><a href="recipes/eggnog.html">Eggnog</a></li>
+    </ul>
 </body>
 </html>
