--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <img src="https://t4.ftcdn.net/jpg/03/01/76/65/360_F_301766534_Nd0WoLqus2TVilLcRQL6OMACiJeEgnWu.jpg" alt="odin recipes">
-    <ul>
+    <ul class="home-links">
         <li><a href="recipes/cheesy-pesto-roll.html">Cheesy Pesto Roll</a></li>
         <li><a href="recipes/potato-latkes.html">Potato Latkes</a></li>
         <li><a href="recipes/eggnog.html">Eggnog</a></li>
