--- a/recipes/cheesy-pesto-roll.html
+++ b/recipes/cheesy-pesto-roll.html
@@ -5,29 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cheesy Pesto Roll</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Cheesy Pesto Roll Wreath</h1>
     <img src="https://www.allrecipes.com/thmb/br3wRqkzq1s5D9xeHfiYRwDcdk4=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/9429292-5602b3421b094537afb19741ec7eb17d.jpg" alt="cheesy pesto roll wreath">
-    <p>This savory appetizer is great to eat as a bite on its own or spread onto crackers. You can add fresh rosemary sprigs and cherry tomatoes to make the wreath even more festive.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>2 (8 ounce) packages refrigerated crescent rolls</li>
-        <li>1 (8 ounce) package cream cheese, softened</li>
-        <li>1 cup shredded mozzarella cheese</li>
-        <li>½ cup basil pesto, divided</li>
-        <li>12 sprigs fresh rosemary, or to taste</li>
-        <li>1 pint cherry tomatoes, or to taste</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Preheat the oven to 375 degrees F (190 degrees C). Line a large baking sheet with parchment paper. Draw a 5-inch circle on the center of the parchment paper.</li>
-        <li>Open both cans of dough and separate crescents into 16 triangles. Arrange the triangles on the prepared baking sheet the flat edges lined up and overlapping along the 5-inch circle and the points facing outward; it will resemble a sunburst.</li>
-        <li>Combine cream cheese, mozzarella cheese, and 6 tablespoons pesto in a bowl. Mix until well combined, then spread around the center of the ring of crescent dough.</li>
-        <li>Wrap each dough triangle up over filling and tucking it under the bottom to secure. Repeat around the entire ring. Brush remaining 2 tablespoons pesto on top.</li>
-        <li>Bake in the preheated oven until the dough is golden brown and cooked, 18 to 20 minutes. Remove from oven and allow to cool for 5 minutes.</li>
-        <li>Slice into individually portioned rings, but keep all the rings in place in the shape of a wreath. Garnish with rosemary sprigs and cherry tomatoes.</li>
-    </ol>
-    <a href="../index.html">Back to Odin Recipes</a>
+    <div>
+        <!-- Description -->
+        <p>This savory appetizer is great to eat as a bite on its own or spread onto crackers. You can add fresh rosemary sprigs and cherry tomatoes to make the wreath even more festive.</p>
+
+        <!-- Ingredients -->
+        <h3>Ingredients</h3>
+        <ul>
+            <li>2 (8 ounce) packages refrigerated crescent rolls</li>
+            <li>1 (8 ounce) package cream cheese, softened</li>
+            <li>1 cup shredded mozzarella cheese</li>
+            <li>½ cup basil pesto, divided</li>
+            <li>12 sprigs fresh rosemary, or to taste</li>
+            <li>1 pint cherry tomatoes, or to taste</li>
+        </ul>
+
+        <!-- Steps -->
+        <h3>Steps</h3>
+        <ol>
+            <li>Preheat the oven to 375 degrees F (190 degrees C). Line a large baking sheet with parchment paper. Draw a 5-inch circle on the center of the parchment paper.</li>
+            <li>Open both cans of dough and separate crescents into 16 triangles. Arrange the triangles on the prepared baking sheet the flat edges lined up and overlapping along the 5-inch circle and the points facing outward; it will resemble a sunburst.</li>
+            <li>Combine cream cheese, mozzarella cheese, and 6 tablespoons pesto in a bowl. Mix until well combined, then spread around the center of the ring of crescent dough.</li>
+            <li>Wrap each dough triangle up over filling and tucking it under the bottom to secure. Repeat around the entire ring. Brush remaining 2 tablespoons pesto on top.</li>
+            <li>Bake in the preheated oven until the dough is golden brown and cooked, 18 to 20 minutes. Remove from oven and allow to cool for 5 minutes.</li>
+            <li>Slice into individually portioned rings, but keep all the rings in place in the shape of a wreath. Garnish with rosemary sprigs and cherry tomatoes.</li>
+        </ol>
+        <a href="../index.html" class="link-back">Back to Odin Recipes</a>
+    </div>
 </body>
 </html>
