--- a/recipes/potato-latkes.html
+++ b/recipes/potato-latkes.html
@@ -5,30 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Potato Latkes</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Potato Latkes</h1>
     <img src="https://www.allrecipes.com/thmb/gqG5w5U2cb0GKZhzWqj9vuEARvs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/1423828-e7c9604aac204fe8994937e8782d42c8.jpg" alt="potato latkes">
-    <h2>Latkes are a must-have at Hanukkah, but are really wonderful any time of the year!</h2>
-    <p>Latkes (a.k.a. potato pancakes) are a crowd-pleasing addition to any table — and this family recipe will impress even the pickiest eaters. The secret ingredient? Saltine crackers! The pantry staple replaces all-purpose flour, binds the latkes together, and contributes to the irresistible texture. Though they're traditionally served during Hanukkah, you'll want to enjoy these wonderfully crispy and savory latkes all year long.</p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>3 cups shredded potato</li>
-        <li>¼ cup grated onion</li>
-        <li>2 large eggs, beaten</li>
-        <li>6 saltine crackers, or as needed, crushed</li>
-        <li>½ teaspoon salt, or more to taste</li>
-        <li>¼ teaspoon ground black pepper</li>
-        <li>½ cup vegetable oil, or as needed</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Mix potato, onion, eggs, crushed crackers, salt, and pepper together in a large bowl.
-        </li>
-        <li>Heat 1/4 inch oil in a heavy skillet over medium-high heat.</li>
-        <li>Drop spoonfuls of the potato mixture, first pressing potato mixture against the side of the bowl to remove excess liquid, into the hot oil; slightly flatten the latkes into the oil with the back of your spoon so they are an even thickness.</li>
-        <li>Cook in batches in the hot oil until browned and crisp, 3 to 5 minutes per side. Drain latkes on a paper towel-line plate.</li>
-    </ol>
-    <a href="../index.html">Back to Odin Recipes</a>
+   
+    <div>
+        <h2>Latkes are a must-have at Hanukkah, but are really wonderful any time of the year!</h2>
+        <!-- Description -->
+        <p>Latkes (a.k.a. potato pancakes) are a crowd-pleasing addition to any table — and this family recipe will impress even the pickiest eaters. The secret ingredient? Saltine crackers! The pantry staple replaces all-purpose flour, binds the latkes together, and contributes to the irresistible texture. Though they're traditionally served during Hanukkah, you'll want to enjoy these wonderfully crispy and savory latkes all year long.</p>
+
+        <!-- Ingredients -->
+        <h3>Ingredients</h3>
+        <ul>
+            <li>3 cups shredded potato</li>
+            <li>¼ cup grated onion</li>
+            <li>2 large eggs, beaten</li>
+            <li>6 saltine crackers, or as needed, crushed</li>
+            <li>½ teaspoon salt, or more to taste</li>
+            <li>¼ teaspoon ground black pepper</li>
+            <li>½ cup vegetable oil, or as needed</li>
+        </ul>
+
+        <!-- Steps -->
+        <h3>Steps</h3>
+        <ol>
+            <li>Mix potato, onion, eggs, crushed crackers, salt, and pepper together in a large bowl.
+            </li>
+            <li>Heat 1/4 inch oil in a heavy skillet over medium-high heat.</li>
+            <li>Drop spoonfuls of the potato mixture, first pressing potato mixture against the side of the bowl to remove excess liquid, into the hot oil; slightly flatten the latkes into the oil with the back of your spoon so they are an even thickness.</li>
+            <li>Cook in batches in the hot oil until browned and crisp, 3 to 5 minutes per side. Drain latkes on a paper towel-line plate.</li>
+        </ol>
+        <a href="../index.html" class="link-back">Back to Odin Recipes</a>
+    </div>
 </body>
 </html>
